[gd_scene load_steps=9 format=2]

[ext_resource path="res://audio/tone.wav" type="AudioStream" id=1]
[ext_resource path="res://images/shrek1.png" type="Texture" id=2]
[ext_resource path="res://audio/laugh.mp3" type="AudioStream" id=3]
[ext_resource path="res://images/shrek2.png" type="Texture" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://audio/roar.mp3" type="AudioStream" id=7]
[ext_resource path="res://game.theme" type="Theme" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "evil",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
} ]

[node name="Main" type="Node2D"]
script = ExtResource( 5 )

[node name="background" type="AnimatedSprite" parent="."]
position = Vector2( 400, 300 )
frames = SubResource( 1 )
animation = "normal"
__meta__ = {
"_edit_lock_": true
}

[node name="laugh" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -3.0

[node name="tone" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -80.0
pitch_scale = 7.0

[node name="roar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 3.0

[node name="ui" type="Node2D" parent="."]

[node name="title" type="RichTextLabel" parent="ui"]
margin_top = 32.0
margin_right = 134.0
margin_bottom = 53.0
rect_scale = Vector2( 6, 7 )
theme = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "[center]DON'T BLINK![/center]"
text = "DON'T BLINK!"

[node name="confirm" type="Button" parent="ui"]
margin_left = 128.0
margin_top = 504.0
margin_right = 164.0
margin_bottom = 518.0
rect_scale = Vector2( 3.5, 4 )
theme = ExtResource( 8 )
text = "Okay."

[node name="howtoplay" type="Button" parent="ui"]
margin_left = 368.0
margin_top = 496.0
margin_right = 463.0
margin_bottom = 516.0
rect_scale = Vector2( 3.5, 4 )
theme = ExtResource( 8 )
text = "How To Play?"

[node name="mousetimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="blinked" type="Button" parent="."]
visible = false
margin_right = 229.0
margin_bottom = 150.0
rect_scale = Vector2( 3.5, 4 )
theme = ExtResource( 8 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "You blinked!"

[connection signal="pressed" from="ui/confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="ui/howtoplay" to="." method="_on_howtoplay_pressed"]
[connection signal="timeout" from="mousetimer" to="." method="_on_mousetimer_timeout"]
[connection signal="pressed" from="blinked" to="." method="_on_blinked_pressed"]
